--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "firebase": "^11.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -24,4 +25,4 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "vite": "^5.1.0"
   }
-} 
+}
