Add database configuration with environment variables

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 # Database Configuration
-spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/phone_number_generator?createDatabaseIfNotExist=true}
-spring.datasource.username=${DATABASE_USERNAME:root}
-spring.datasource.password=${DATABASE_PASSWORD:123456}
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://phonegen-mysql.mysql.database.azure.com:3306/phone_number_generator?useSSL=true&serverTimezone=UTC}
+spring.datasource.username=${DATABASE_USERNAME:adminuser@phonegen-mysql}
+spring.datasource.password=${DATABASE_PASSWORD:Password123@}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
