--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     name: phone-generator-api
     runtime: docker
     region: singapore
-    plan: free
+    plan: starter
     buildCommand: cd backend && ./mvnw clean install -DskipTests
     dockerfilePath: ./backend/Dockerfile
     envVars:
@@ -25,7 +25,7 @@ services:
   - type: web
     name: phone-generator-frontend
     runtime: static
-    plan: free
+    plan: starter
     buildCommand: cd frontend && npm install && npm run build
     staticPublishPath: ./frontend/dist
     envVars:
