Fix Docker build with multi-stage Dockerfile

--- a/render.yaml
+++ b/render.yaml
@@ -14,10 +14,8 @@ services:
         value: adminuser@phonegen-mysql
       - key: DATABASE_PASSWORD
         value: Password123@
-      - key: PORT
-        value: 8080
-      - key: JAVA_VERSION
-        value: 21
+      - key: SPRING_PROFILES_ACTIVE
+        value: prod
     healthCheckPath: /actuator/health
     autoDeploy: true
 
