--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,5 +6,9 @@ RUN mvn clean package -DskipTests
 FROM amazoncorretto:21-alpine
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
+
+# Add MySQL JDBC driver
+RUN apk add --no-cache mysql-client
+
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app.jar"] 
