--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 # Database Configuration
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=jdbc:mysql://phonegen-mysql.mysql.database.azure.com:3306/phone_number_generator?useSSL=true&requireSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=adminuser@phonegen-mysql
+spring.datasource.password=Password123@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.connection-timeout=30000
@@ -14,10 +14,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=false
 
 # Server Configuration
-server.port=${PORT:8080}
+server.port=8080
 
 # CORS Configuration
-spring.web.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:*}
+spring.web.cors.allowed-origins=*
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
