Configure Azure MySQL connection in Render deployment

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 # Database Configuration
-spring.datasource.url=jdbc:mysql://phonegen-mysql.mysql.database.azure.com:3306/phone_number_generator?useSSL=true&requireSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=adminuser@phonegen-mysql
-spring.datasource.password=Password123@
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://phonegen-mysql.mysql.database.azure.com:3306/phone_number_generator?useSSL=true&requireSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true}
+spring.datasource.username=${DATABASE_USERNAME:adminuser@phonegen-mysql}
+spring.datasource.password=${DATABASE_PASSWORD:Password123@}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.connection-timeout=30000
