--- a/render.yaml
+++ b/render.yaml
@@ -15,7 +15,7 @@ services:
       - key: DATABASE_URL
         value: jdbc:mysql://phonegen-mysql.mysql.database.azure.com:3306/phone_number_generator?useSSL=true&requireSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
       - key: DATABASE_USERNAME
-        value: adminuser@phonegen-mysql
+        value: adminuser
       - key: DATABASE_PASSWORD
         value: Password123@
     healthCheckPath: /actuator/health
